--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,8 @@ body {
     box-sizing: border-box;
     box-shadow: 4px 4px 4px black;
     border-radius: 10px;
-    margin-left: 23px;
-    margin-right: 23px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .title {
@@ -37,9 +37,9 @@ body {
 }
 
 .container {
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-rows: repeat(6, 550px);
+    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
 }
 
 .card {
@@ -47,7 +47,6 @@ body {
     background-color: #E7E5DA;
     border: 2px solid black;
     border-radius: 10px;
-    width: calc(50% - 40px);
     margin: 10px;
     padding: 20px;
 
@@ -84,7 +83,7 @@ body {
 }
 
 .card img {
-    height: 350px; /* Set a fixed height for the images */
+    height: 55%; /* Set a fixed height for the images */
     width: 100%;
     object-fit: cover;
 }
