--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,7 @@ body {
     box-sizing: border-box;
     box-shadow: 4px 4px 4px black;
     border-radius: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin: 10px
 }
 
 .title {
@@ -38,7 +37,7 @@ body {
 
 .container {
     display: grid;
-    grid-template-rows: repeat(6, 550px);
+    grid-template-rows: repeat(auto, 550px);
     grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
 }
 
@@ -83,7 +82,7 @@ body {
 }
 
 .card img {
-    height: 55%; /* Set a fixed height for the images */
+    height: 300px;
     width: 100%;
     object-fit: cover;
 }
