--- a/src/styles/restaurant_page.css
+++ b/src/styles/restaurant_page.css
@@ -11,9 +11,6 @@ body {
     grid-template-areas:
     'main hours'
     'main hours'
-    'img1 review1'
-    'review2 img2'
-    'img3 review3'
 }
 
 .card {
@@ -23,7 +20,9 @@ body {
     border: 2px solid black;
     border-radius: 10px;
     margin: 10px;
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
 }
 
 h1 {
@@ -42,6 +41,10 @@ h1 {
 
 .a {
     text-align: left;
+}
+
+h2 {
+    font-size: 24pt;
 }
 
 .hours {
@@ -65,4 +68,14 @@ h1 {
 
 .times {
     text-align: left;
+}
+
+.container2 {
+    display: grid;
+    grid-template-rows: repeat(auto, 500px);
+    grid-template-columns: 3fr 3fr 3fr;
+    padding-top: 10px;
+    grid-template-areas:
+    'img review img'
+    'review img review'
 }
