--- a/src/styles/restaurant_page.css
+++ b/src/styles/restaurant_page.css
@@ -20,9 +20,7 @@ body {
     border: 2px solid black;
     border-radius: 10px;
     margin: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
+    padding: 20px;
 }
 
 h1 {
@@ -76,6 +74,33 @@ h2 {
     grid-template-columns: 3fr 3fr 3fr;
     padding-top: 10px;
     grid-template-areas:
-    'img review img'
-    'review img review'
+    'img1 review1 img2'
+    'review2 img3 review3'
+}
+
+.img1 {
+    grid-area: img1;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.review1 {
+    grid-area: review1;
+}
+
+.img2 {
+    grid-area: img2;
+}
+
+.review2 {
+    grid-area: review2;
+}
+
+.img3 {
+    grid-area: img3;
+}
+
+.review3 {
+    grid-area: review3;
 }
