--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -11,7 +11,7 @@ body {
 }
 
 .box {
-    text-align: left;
+    text-align: center;
     background-color: #E7E5DA;
     border: 2px solid black;
     border-radius: 10px;
