--- a/src/styles/restaurant_page.css
+++ b/src/styles/restaurant_page.css
@@ -14,6 +14,14 @@ body {
     gap: 15px;
 }
 
+a{
+    color: black;
+}
+
+a:hover {
+    color: blue;
+}
+
 .card {
     background-color: #E7E5DA;
     border: 2px solid black;
@@ -29,10 +37,12 @@ body {
     grid-template-rows: repeat(auto, 500px);
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     padding-top: 10px;
+    font-size: 16pt;
 }
 
 .hours {
     text-align: center;
+    font-size: 16pt;
 }
 
 .hours h2 {
