--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,19 @@ body {
     margin: 10px
 }
 
+.signup-form {
+    background-color: #E7E5DA;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    border: 2px solid black;
+    box-sizing: border-box;
+    box-shadow: 4px 4px 4px black;
+    border-radius: 10px;
+    margin: 10px;
+}
+
 .title {
     font-size: 24pt;
     color: black;
